--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.2",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-toasts": "^3.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
