--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.0.1",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.0",
     "firebase": "^9.9.2",
+    "html-react-parser": "^3.0.1",
+    "node-html-parser": "^5.4.2-0",
     "react": "^18.2.0",
+    "react-awesome-modal": "^2.0.5",
+    "react-bootstrap": "^2.5.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "react-toasts": "^3.0.6",
     "web-vitals": "^2.1.4"
   },
