--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql": "^2.18.1",
     "node-html-parser": "^5.4.2-0",
     "react": "^18.2.0",
+    "react-async": "^10.0.1",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^2.5.0",
     "react-daum-postcode": "^3.1.1",
