--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-navigation-stack": "^2.10.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
     "react-toasts": "^3.0.6",
     "web-vitals": "^2.1.4"
