--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-js-pagination": "^3.0.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
     "react-toasts": "^3.0.6",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
