--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "firebase": "^9.6.11",
+    "history": "^5.3.0",
     "html-react-parser": "^3.0.1",
     "mysql": "^2.18.1",
     "node-html-parser": "^5.4.2-0",
@@ -24,7 +25,7 @@
     "react-js-pagination": "^3.0.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
