--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-toasts": "^3.0.6",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
