add: add react-modal library

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-js-pagination": "^3.0.3",
+    "react-modal": "^3.16.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-router-dom": "^6.9.0",
