--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.7.2",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
