--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-firebase-admin-key.json
+/src/firebase-admin-key.json
 # dependencies
 /node_modules
 /.pnp
