--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.6.11",
+    "firebase-admin": "^12.0.0",
     "history": "^5.3.0",
     "html-react-parser": "^3.0.1",
     "mysql": "^2.18.1",
@@ -35,14 +36,15 @@
     "react-toasts": "^3.0.6",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
+    "stream": "^0.0.2",
     "styled-component": "^2.8.0",
     "styled-components": "^6.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -66,7 +68,17 @@
     ]
   },
   "devDependencies": {
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "gh-pages": "^4.0.0",
-    "tailwindcss": "^3.1.8"
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.1.8",
+    "url": "^0.11.3"
   }
 }
