--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+/src/config-overrides.js
 /src/firebase-admin-key.json
 # dependencies
 /node_modules
@@ -22,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.gitignore
